--- a/index.html
+++ b/index.html
@@ -1,48 +1,92 @@
 <!DOCTYPE html>
 <html lang="id">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Blog Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="img/favicon.png" sizes="16x16" type="image/png">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Home - Blog Template</title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-        <a href="#" class="navbar-brand"><img src="img/nuno.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="#home" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#course" class="nav-link">Course</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#features" class="nav-link">Features</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#resources" class="nav-link">Resources</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0 search">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-            </form>
-        </div>
+
+<body class="main">
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-white fixed-top">
+      <a href="#" class="navbar-brand"><span class="bg-dark play-font">block</span><span
+          class="bg-success play-font">Code</span></a>
+      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#" class="nav-link active">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Project</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Template</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0 search">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" required>
+          <button class="btn btn-outline my-2 my-sm-0" type="submit"><i class="fa fa-search"
+              aria-hidden="true"></i></button>
+        </form>
+      </div>
     </nav>
-    <main>
-        <div class="container">
-            <h1>Hello</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eligendi esse tempore est nemo cum eos, laborum temporibus quasi ipsum nostrum aperiam optio omnis. Eius minus repellendus nemo ducimus soluta assumenda ipsam quod laudantium exercitationem esse magni placeat fugiat, dolores, explicabo mollitia ex laboriosam provident? Quisquam ad molestias similique mollitia natus quidem dolor eveniet dolorem quis distinctio nobis in aut cumque, sunt deleniti soluta harum repudiandae corrupti et id? Neque, nihil ullam necessitatibus adipisci laudantium, officia molestias blanditiis illum autem sequi obcaecati rem. Iure, a eveniet. Est voluptate aliquid quidem accusantium modi, consectetur at mollitia, commodi maxime, quod illo. Accusantium.</p>
-        </div>
-    </main>
+  </header>
+
+  <main class="main">
+    <div class="main-header">
+      <div class="main-jumbotron">
+        Hello World, Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, tempora?
+      </div>
+      <div class="nav-menu">
+        <p class="title">Pilihan kursus terbanyak di dunia</p>
+        <p>Pilih dari 130.000 kursus video online dengan tambahan terbitan baru setiap bulan</p>
+        <ul>
+          <li>
+            <a href=""></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </main>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<footer class="main">
+  <div class="header">
+    <div class="logo">
+      <span class="bg-dark">block</span><span class="bg-success">Code</span>
+    </div>
+    <div class="nav-footer">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Terms of Service</a></li>
+        <li><a href="">Privacy Policy</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="bottom">
+    &copy; 2020 <a href="">Block Code</a> | Made with ❤️ by <a href="">Fauzi Galih Aji Saputro</a>
+  </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+  integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
+
 </html>
