--- a/index.html
+++ b/index.html
@@ -50,14 +50,160 @@
       <div class="main-jumbotron">
         Hello World, Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, tempora?
       </div>
-      <div class="nav-menu">
-        <p class="title">Pilihan kursus terbanyak di dunia</p>
-        <p>Pilih dari 130.000 kursus video online dengan tambahan terbitan baru setiap bulan</p>
-        <ul>
-          <li>
-            <a href=""></a>
-          </li>
-        </ul>
+      <div class="container-main">
+        <div class="list-item blog">
+          <p class="title">Blog Terbaru</p>
+          <p class="desc">Blog disini merupakan </p>
+          <a href="" class="more">Show More</a>
+          <div class="list-card">
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="list-item project">
+          <p class="title">Project Terbaru</p>
+          <p class="desc">Project disini merupakan aplikasi yang sudah siap digunakan oleh pengguna untuk menyelesaikan masalah.</p>
+          <a href="" class="more">Show More</a>
+          <div class="list-card">
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="list-item template">
+          <p class="title">Template Terbaru</p>
+          <p class="desc">Template disini merupakan tampilan website yang sudah diatur sedemikian rupa dengan ukuran perangkat yang berbeda.</p>
+          <a href="" class="more">Show More</a>
+          <div class="list-card">
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+            <a href="">
+              <img src="img/garuda.jpg" alt="">
+              <div class="content-card">
+                <p>Garuda Pancasila Garuda Pancasila</p>
+                <div class="uploader">
+                  <img src="img/garuda.jpg" alt="">
+                  <p class="name">Fauzi Galih Aji Saputro</p>
+                  <p class="date">11 Nov, 2020</p>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </main>
