--- a/admin/index.html
+++ b/admin/index.html
@@ -94,7 +94,7 @@
     </div>
   </main>
 </body>
-<footer>
+<footer class="fixed">
   <div class="header">
     <div class="logo">
       <span class="bg-dark">block</span><span class="bg-success">Code</span>
