--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Home - Blog Template</title>
 </head>
 
-<body class="main">
+<body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-white fixed-top">
       <a href="#" class="navbar-brand"><span class="bg-dark play-font">block</span><span
@@ -155,7 +155,7 @@
         </div>
         <div class="list-item template">
           <p class="title">Template Terbaru</p>
-          <p class="desc">Template disini merupakan tampilan website yang sudah diatur sedemikian rupa dengan ukuran perangkat yang berbeda.</p>
+          <p class="desc">Template disini merupakan tampilan website yang sudah diatur sedemikian rupa dengan ukuran perangkat yang berbeda-beda atau responsive.</p>
           <a href="" class="more">Show More</a>
           <div class="list-card">
             <a href="">
@@ -208,7 +208,7 @@
     </div>
   </main>
 </body>
-<footer class="main">
+<footer>
   <div class="header">
     <div class="logo">
       <span class="bg-dark">block</span><span class="bg-success">Code</span>
